<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInScreen">

    <TextView
        android:id="@+id/logInScreen_appNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/rubik_semibold"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logInScreen_welcomeLabel"
        style="@style/CommonText.MediumSize.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login_welcome"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInScreen_appNameLabel" />

    <Button
        android:id="@+id/logInScreen_studentButton"
        style="@style/CommonText.MediumSize"
        android:layout_width="254dp"
        android:layout_height="64dp"
        android:layout_marginTop="128dp"
        android:onClick="studentSignIn"
        android:text="@string/login_iamStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInScreen_welcomeLabel" />

    <Button
        android:id="@+id/logInScreen_teacherButton"
        style="@style/CommonText.MediumSize"
        android:backgroundTint="@color/colorPrimaryVariant"
        android:layout_width="254dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/login_iamTeacher"
        android:onClick="teacherSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInScreen_studentButton" />

</androidx.constraintlayout.widget.ConstraintLayout>