<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.StudentLogIn">

    <TextView
        android:id="@+id/studentLogIn_logInAsStudent"
        style="@style/CommonText.MediumSize.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/login_signInAsStudent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:text="@string/login_choose_your_class"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentLogIn_logInAsStudent" />

    <Spinner
        android:id="@+id/spinnerNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/spinnerNumbers"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentLogIn_idField"
        style="@style/NewTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/studentLogIn_passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNumbers">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/NewTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_ID_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/studentLogIn_passwordField"
        style="@style/NewTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentLogIn_idField"
        app:passwordToggleEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/NewTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/studentLogIn_linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/semigreen_rectangle_rounded"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="26dp"
        app:layout_constraintBottom_toTopOf="@+id/studentLogIn_logInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studentLogIn_passwordField">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_circle"
            app:tint="@color/colorOnSecondary2" />

        <TextView
            style="@style/CommonText.SmallSize.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/personal_ID_help" />


    </LinearLayout>

    <Button
        android:id="@+id/studentLogIn_logInButton"
        style="@style/CommonText.MediumSize"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentLogIn_linearLayout" />

    <ImageButton
        android:id="@+id/studentLogIn_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:onClick="goBack"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/studentLogIn_logInAsStudent"
        app:layout_constraintEnd_toStartOf="@+id/studentLogIn_logInAsStudent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/studentLogIn_logInAsStudent"
        app:srcCompat="@drawable/ic_arrow_left" />


</androidx.constraintlayout.widget.ConstraintLayout>